--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -256,7 +256,7 @@
             <div class="container">
                 <div class="talk_text">
                     <h4>Are you ready to talk?</h4>
-                    <a href="mailto:contact@sierracompany.com">contact@sierracompany.com</a>
+                    <a href="mailto:contact@sierracompany.com">sakurafarisarl@gmail.com</a>
                 </div>
             </div>
         </section>
@@ -278,16 +278,6 @@
                                 <div class="f_title">
                                     <h3>Instagram</h3>
                                 </div>
-                                <ul>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-1.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-2.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-3.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-4.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-5.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-6.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-7.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-8.jpg' %}"  alt=""></a></li>
-                                </ul>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
