--- a/web_sakurafari/templates/home.html
+++ b/web_sakurafari/templates/home.html
@@ -91,7 +91,7 @@
                         <div class="slider_text_box">
                             <div class="tp-caption tp-resizeme first_text" 
                             data-x="['left','left','left','left','15','center']" 
-                            data-hoffset="['0','80','80','0']" 
+                            data-hoffset="['0','80','80','0']"  
                             data-y="['top','top','top','top']" 
                             data-voffset="['400','400','400','250','180','180']" 
                             data-fontsize="['72','72','72','50','50','30']"
@@ -137,7 +137,7 @@
                             </div>
                             <div class="tp-caption tp-resizeme single_img" 
                             data-x="['right','right','right','right','right','right']" 
-                            data-hoffset="['0','0','0','0']" 
+                            data-hoffset="['-100','-100','-100','-100']" 
                             data-y="['top','top','top','top']" 
                             data-voffset="['180','180','180','180','0']" 
                             data-fontsize="['65','65','60','40','25']"
@@ -164,7 +164,7 @@
                             data-hoffset="['0','80','80','0']" 
                             data-y="['top','top','top','top']" 
                             data-voffset="['400','400','400','250','180','180']" 
-                            data-fontsize="['72','72','72','50','50','30']"
+                            data-fontsize="['62','62','62','40','40','20']"
                             data-lineheight="['82','82','82','62','62','42']"
                             data-width="['none']"
                             data-height="none"
@@ -172,7 +172,7 @@
                             data-type="text" 
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Identifying Innovation: <br />Solar World's Cutting-Edge <br />Portable Power Stations</div>
+                            data-textAlign="['left','left','left','left','left','center']">Identifying Innovation, <br />Solar World's Cutting-Edge <br />Portable Power Stations</div>
                             
                             <div class="tp-caption tp-resizeme secand_text" 
                                 data-x="['left','left','left','left','15','center']" 
@@ -207,8 +207,8 @@
                             </div>
                             <div class="tp-caption tp-resizeme single_img" 
                             data-x="['right','right','right','right','right','right']" 
-                            data-hoffset="['0','0','0','0']" 
-                            data-y="['top','top','top','top']" 
+                            data-hoffset="['-100','-100','-100','-100']" 
+                            data-y="['middle','middle','middle','middle']" 
                             data-voffset="['180','180','180','180','0']" 
                             data-fontsize="['65','65','60','40','25']"
                             data-lineheight="['75','75','75','50','35']"
@@ -219,7 +219,7 @@
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
                             data-textAlign="['left','left','left','left','left','center']">
-                                <img src="{% static 'web_sakurafari/img/home-slider/slider2.png' %}"  alt="">
+                                <img src="{% static 'web_sakurafari/img/home-slider/slider2.jpg' %}"  alt="">
                             </div>
                         </div>
                     </li>
@@ -242,7 +242,7 @@
                             data-type="text" 
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Identifying Innovation: <br /> TOKYO8 by <br /> TAIYO YUKA</div>
+                            data-textAlign="['left','left','left','left','left','center']">TOKYO8 by <br /> TAIYO YUKA</div>
                             
                             <div class="tp-caption tp-resizeme secand_text" 
                                 data-x="['left','left','left','left','15','center']" 
@@ -277,7 +277,7 @@
                             </div>
                             <div class="tp-caption tp-resizeme single_img" 
                             data-x="['right','right','right','right','right','right']" 
-                            data-hoffset="['0','0','0','0']" 
+                            data-hoffset="['-100','-100','-100','-100']" 
                             data-y="['top','top','top','top']" 
                             data-voffset="['180','180','180','180','0']" 
                             data-fontsize="['65','65','60','40','25']"
@@ -289,7 +289,7 @@
                             data-responsive_offset="on" 
                             data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
                             data-textAlign="['left','left','left','left','left','center']">
-                                <img src="{% static 'web_sakurafari/img/home-slider/slider3.png' %}"  alt="">
+                                <img src="{% static 'web_sakurafari/img/home-slider/slider3.jpg' %}"  alt="">
                             </div>
                         </div>
                     </li>
@@ -347,16 +347,7 @@
             <div class="left_3d">
                 <div class="shap_slider_inner owl-carousel">
                     <div class="item">
-                        <h4>“The Architect of Change”</h4>
-                        <p class="justified-text">As an IT professional specializing in ICT4D and Data Center Operations, I am passionate about leveraging technology to create impactful solutions. Committed to bridging the gap between Cameroon and Japan, I foster technology transfer and strategic partnerships to unlock Central Africa’s potential.
-                            Through SAKURAFARI, I combine my expertise and entrepreneurial vision to drive innovation, collaboration, and sustainable growth</p>
-                        <div class="media">
-                            <img src="{% static 'web_sakurafari/img/team/people/founder.jpg' %}"  alt="">
-                            <div class="media-body">
-                                <h5>Freddy ABEME</h5>
-                                <h6>Founder</h6>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -365,13 +356,17 @@
                     <div class="text_3d">
                         <div class="l_title">
                             <img src="{% static 'web_sakurafari/img/icon/title-icon.png' %}"  alt="">
-                            <h6>Discover the features</h6>
-                            <h2>We don’t hide, we stand tall in front of chalenge</h2>
+                            <h2>Discover </h2>
+                            <h2>The Architect of Change</h2>
                         </div>
-                        <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
+                        <p class="justified-text">As an IT professional specializing in ICT4D and Data Center Operations, I am passionate about leveraging technology to create impactful solutions. Committed to bridging the gap between Cameroon and Japan, I foster technology transfer and strategic partnerships to unlock Central Africa’s potential.
+                            Through SAKURAFARI, I combine my expertise and entrepreneurial vision to drive innovation, collaboration, and sustainable growth</p>
                     </div>
                     <div class="shap_mobile">
-                        <img src="{% static 'web_sakurafari/img/iphone4.png' %}"  alt="">
+                        <img src="{% static 'web_sakurafari/img/Boss.jpg' %}"  alt="">
+                        <div class="media-body">
+                            <h6>Freddy ABEME, Founder</h6>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -386,17 +381,10 @@
                         <div class="team_people_text">
                             <div class="l_title">
                                 <img src="{% static 'web_sakurafari/img/icon/title-icon.png' %}"  alt="">
-                                <h6>Discover the features</h6>
-                                <h2>We build a strong team of great people</h2>
+                                <h6>Build the Future with Us</h6>
+                                <h2>The Time is Now—Join SAKURAFARI</h2>
                             </div>
-                            <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra.</p>
-                            <ul>
-                                <li><a href="#">Nunc nec maximus dui, </a></li>
-                                <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                                <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                                <li><a href="#">Ex mauris, ornare eget pretium </a></li>
-                                <li><a href="#">Cras ex mauris, ornare eget preti</a></li>
-                            </ul>
+                            <p class="justified-text">SAKURAFARI is calling on trailblazers and change-makers to revolutionize technology transfer and sustainable growth. Will you answer the call?</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -404,22 +392,22 @@
                             <div class="row">
                                 <div class="col-lg-6 col-6">
                                     <div class="team_img_item">
-                                        <img src="{% static 'web_sakurafari/img/team/people/people-1.jpg' %}"  alt="">
+                                        <img src="{% static 'web_sakurafari/img/team/people/SFteam1.png' %}"  alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-6">
                                     <div class="team_img_item">
-                                        <img src="{% static 'web_sakurafari/img/team/people/people-2.jpg' %}"  alt="">
+                                        <img src="{% static 'web_sakurafari/img/team/people/SFteam2.png' %}"  alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-6">
                                     <div class="team_img_item">
-                                        <img src="{% static 'web_sakurafari/img/team/people/people-3.jpg' %}"  alt="">
+                                        <img src="{% static 'web_sakurafari/img/team/people/SFteam3.png' %}"  alt="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-6">
                                     <div class="team_img_item">
-                                        <img src="{% static 'web_sakurafari/img/team/people/people-4.jpg' %}"  alt="">
+                                        <img src="{% static 'web_sakurafari/img/team/people/SFteam4.png' %}"  alt="">
                                     </div>
                                 </div>
                             </div>
@@ -501,16 +489,6 @@
                                 <div class="f_title">
                                     <h3>Instagram</h3>
                                 </div>
-                                <ul>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-1.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-2.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-3.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-4.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-5.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-6.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-7.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-8.jpg' %}"  alt=""></a></li>
-                                </ul>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
