--- a/web_sakurafari/templates/single-blog.html
+++ b/web_sakurafari/templates/single-blog.html
@@ -266,7 +266,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -274,16 +274,7 @@
                                 <div class="f_title">
                                     <h3>Instagram</h3>
                                 </div>
-                                <ul>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-1.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-2.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-3.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-4.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-5.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-6.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-7.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-8.jpg' %}"  alt=""></a></li>
-                                </ul>
+                                
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
