--- a/web_sakurafari/templates/service.html
+++ b/web_sakurafari/templates/service.html
@@ -11,6 +11,18 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>SAKURAFARI</title>
 
+        <style>
+            .justified-text {
+                text-align: justify;
+                text-justify: inter-word;
+                margin-bottom: 10px;
+                line-height: 1.6;
+                hyphens: auto;
+                word-spacing: 0.1em;
+                max-width: 800px;
+            }
+        </style>
+
         <!-- Icon css link -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/font-awesome.min.css' %}">
         <!-- Bootstrap -->
@@ -91,8 +103,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-1.png' %}"  alt="">
                             </div>
-                            <h4>Brand Identity</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Technology Transfer Services</h4>
+                            <p class="justified-text">• Facilitating the adoption and localization of advanced Japanese technologies in Central Africa, with Cameroon as the entry point. <br> •	Providing consultancy on adapting technologies to the region’s specific needs and challenges.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -101,8 +113,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-2.png' %}"  alt="">
                             </div>
-                            <h4>Online Marketing</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Market Entry Support for Japanese Companies</h4>
+                            <p class="justified-text">•	Conducting market research and feasibility studies to help Japanese companies enter the Central African market (Cameroon).<br>•	Offering local representation and business matchmaking services.<br>• Assisting with regulatory compliance and navigating the business environment in Cameroon.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -111,8 +123,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-3.png' %}"  alt="">
                             </div>
-                            <h4>Social Media</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Pilot Products and Market Validation</h4>
+                            <p class="justified-text">•	Conducting pilot projects to evaluate the viability of innovative products</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -121,8 +133,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-4.png' %}"  alt="">
                             </div>
-                            <h4>Video Support</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Training and Capacity Buildingt</h4>
+                            <p class="justified-text">•	Organizing workshops and training programs on the use and maintenance of advanced technologies.<br> • Building local capacity in industries</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -131,8 +143,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-5.png' %}"  alt="">
                             </div>
-                            <h4>Fast Support</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Collaborative Innovation Platforms</h4>
+                            <p class="justified-text">•	Creating forums and events for Japanese and Central African stakeholders to collaborate on innovative projects.<br> • Hosting technology fairs, exhibitions, and networking sessions.</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -141,8 +153,8 @@
                             <div class="f_icon">
                                 <img src="{% static 'web_sakurafari/img/icon/f-icon-6.png' %}"  alt="">
                             </div>
-                            <h4>Download test</h4>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
+                            <h4>Digital Solutions Integration</h4>
+                            <p class="justified-text">•	Devoloping and deploying cloud-hosted solutions such as corporate's website, e-commerce platforms.<br> • ICT for Development (ICT4D) initiatives</p>
                             <a class="more_btn" href="#">Read More</a>
                         </div>
                     </div>
@@ -274,7 +286,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_about_widget">
                                 <img src="{% static 'web_sakurafari/img/logo.png' %}"  alt="">
-                                <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
+                                <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
@@ -282,16 +294,6 @@
                                 <div class="f_title">
                                     <h3>Instagram</h3>
                                 </div>
-                                <ul>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-1.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-2.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-3.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-4.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-5.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-6.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-7.jpg' %}"  alt=""></a></li>
-                                    <li><a href="#"><img src="{% static 'web_sakurafari/img/instagram/ins-8.jpg' %}"  alt=""></a></li>
-                                </ul>
                             </aside>
                         </div>
                         <div class="col-lg-4 col-sm-6">
