Improved the home page

--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -129,7 +129,7 @@
                                     <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <h4>Maria Smith</h4>
+                                    <h4>MDs</h4>
                                     <h5>CEO Enterprise</h5>
                                 </div>
                             </div>
