--- a/web_sakurafari/templates/home.html
+++ b/web_sakurafari/templates/home.html
@@ -365,7 +365,7 @@
                     <div class="shap_mobile">
                         <img src="{% static 'web_sakurafari/img/Boss.jpg' %}"  alt="">
                         <div class="media-body">
-                            <h6>Freddy ABEME, Founder</h6>
+                            <h6>Freddy ABEME, Founder & Executive Director</h6>
                         </div>
                     </div>
                 </div>
@@ -385,6 +385,8 @@
                                 <h2>The Time is Now—Join SAKURAFARI</h2>
                             </div>
                             <p class="justified-text">SAKURAFARI is calling on trailblazers and change-makers to revolutionize technology transfer and sustainable growth. Will you answer the call?</p>
+                            <h4>Open Roles:</h4>
+                            <p class="justified-text">Director of Operations & Partnerships—Japan <br> Director of Operations & Partnerships—Central Africa (Cameroon)</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
