Config and updates made from pythonanywhere

--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+
         <link rel="stylesheet" href="{% static 'web_sakurafari/img/fav-icon.png' %}">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>SAKURAFARI</title>
@@ -14,7 +14,7 @@
             .justified-text {
                 text-align: justify;
                 font-size: 20px;
-                
+
             }
         </style>
 
@@ -22,16 +22,16 @@
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/font-awesome.min.css' %}">
         <!-- Bootstrap -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/bootstrap.min.css' %}">
-        
+
         <!-- Rev slider css -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/vendors/revolution/css/settings.css' %}">
         <link rel="stylesheet" href="{% static 'web_sakurafari/vendors/revolution/css/layers.css' %}">
         <link rel="stylesheet" href="{% static 'web_sakurafari/vendors/revolution/css/navigation.css' %}">
-        
+
         <!-- Extra plugin css -->
         <link rel="stylesheet" href="{% static 'web_sakurafari/vendors/owl-carousel/owl.carousel.min.css' %}">
         <link rel="stylesheet" href="{% static 'web_sakurafari/vendors/magnify-popup/magnific-popup.css' %}">
-        
+
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'web_sakurafari/css/responsive.css' %}">
 
@@ -43,7 +43,7 @@
         <![endif]-->
     </head>
     <body>
-        
+
         <!--================Header Menu Area =================-->
         <header class="main_menu_area">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -76,7 +76,7 @@
             </nav>
         </header>
         <!--================End Header Menu Area =================-->
-        
+
         <!--================Banner Area =================-->
         <section class="banner_area">
             <div class="container">
@@ -87,7 +87,7 @@
             </div>
         </section>
         <!--================End Banner Area =================-->
-        
+
         <!--================Challange Area =================-->
         <section class="challange_area p_100">
             <div class="container-fluid">
@@ -99,7 +99,7 @@
                                 <h2>Innovation Without Borders, Growth Without Limits</h2>
                             </div>
                             <div class="justified-text">
-                                <p>Founded in September 2024 in Cameroon, 2025 in Japan and headquartered in Yaoundé-Cameroon, Nishinomiya-Japan, SAKURAFARI envisions becoming the premier gateway for any cutting-edge Japanese technologies into the Central African market, with Cameroon as the pivotal entry point. Our mission is to identify, adapt, and integrate innovative solutions from diverse sectors in Japan that promise transformative impact and sustainable growth for the region. At SAKURAFARI, we are committed to bridging the gap between Japan’s technological excellence and Central Africa’s growing potential, fostering a future of progress and collaboration. </p>
+                                <p>Founded in September 2024 in Cameroon and headquartered in Yaoundé-Cameroon, SAKURAFARI envisions becoming the premier gateway for any cutting-edge Japanese technologies into the Central African market, with Cameroon as the pivotal entry point. Our mission is to identify, adapt, and integrate innovative solutions from diverse sectors in Japan that promise transformative impact and sustainable growth for the region. At SAKURAFARI, we are committed to bridging the gap between Japan’s technological excellence and Central Africa’s growing potential, fostering a future of progress and collaboration. </p>
                             </div>
                             <div class="c_video">
                                 <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="{% static 'web_sakurafari/img/icon/video-icon.png' %}"  alt="">See how we work </a>
@@ -115,7 +115,7 @@
             </div>
         </section>
         <!--================End Challange Area =================-->
-        
+
         <!--================Testimonials Slider Area =================-->
         <section class="testimonials_area">
             <div class="container">
@@ -184,7 +184,7 @@
             </div>
         </section>
         <!--================End Testimonials Slider Area =================-->
-        
+
         <!--================We Are Company Area =================-->
         <section class="we_company_area p_100">
             <div class="container">
@@ -250,7 +250,7 @@
             </div>
         </section>
         <!--================End We Are Company Area =================-->
-        
+
         <!--================End We Are Company Area =================-->
         <section class="talk_area">
             <div class="container">
@@ -261,7 +261,7 @@
             </div>
         </section>
         <!--================End We Are Company Area =================-->
-        
+
         <!--================Footer Area =================-->
         <footer class="footr_area">
             <div class="footer_widget_area">
@@ -315,10 +315,10 @@
             </div>
         </footer>
         <!--================End Footer Area =================-->
-        
-        
-        
-        
+
+
+
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="{% static 'web_sakurafari/js/jquery-3.2.1.min.js' %}"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -335,13 +335,13 @@
         <script src="{% static 'web_sakurafari/vendors/revolution/js/extensions/revolution.extension.slideanims.min.js' %}"></script>
         <!-- Extra plugin css -->
         <script src="{% static 'web_sakurafari/vendors/counterup/jquery.waypoints.min.js' %}"></script>
-        <script src="{% static 'web_sakurafari/vendors/counterup/jquery.counterup.min.js' %}"></script> 
+        <script src="{% static 'web_sakurafari/vendors/counterup/jquery.counterup.min.js' %}"></script>
         <script src="{% static 'web_sakurafari/vendors/counterup/apear.js' %}"></script>
         <script src="{% static 'web_sakurafari/vendors/counterup/countto.js' %}"></script>
         <script src="{% static 'web_sakurafari/vendors/owl-carousel/owl.carousel.min.js' %}"></script>
         <script src="{% static 'web_sakurafari/vendors/magnify-popup/jquery.magnific-popup.min.js' %}"></script>
         <script src="{% static 'web_sakurafari/js/smoothscroll.js' %}"></script>
-        
+
         <script src="{% static 'web_sakurafari/js/theme.js' %}"></script>
     </body>
 </html>
